headers = files(
  'gdata-author.h',
  'gdata-category.h',
  'gdata-generator.h',
  'gdata-link.h',
)

install_headers(
  headers,
  subdir: gdata_include_subdir / 'atom',
)

gir_headers += headers

sources += files(
  'gdata-author.c',
  'gdata-category.c',
  'gdata-generator.c',
  'gdata-link.c',
)
