gdata_gcontact_path = join_paths('gdata', 'gcontact')
gdata_gcontact_include_path = join_paths(gdata_includedir, gdata_gcontact_path)

gdata_gcontact_headers = [
	'gdata-gcontact-calendar.h',
	'gdata-gcontact-event.h',
	'gdata-gcontact-external-id.h',
	'gdata-gcontact-jot.h',
	'gdata-gcontact-language.h',
	'gdata-gcontact-relation.h',
	'gdata-gcontact-website.h',
]

install_headers(gdata_gcontact_headers, install_dir: gdata_gcontact_include_path)
