headers = files(
  'gdata-gcontact-calendar.h',
  'gdata-gcontact-event.h',
  'gdata-gcontact-external-id.h',
  'gdata-gcontact-jot.h',
  'gdata-gcontact-language.h',
  'gdata-gcontact-relation.h',
  'gdata-gcontact-website.h',
)

install_headers(
  headers,
  subdir: gdata_include_subdir / 'gcontact',
)

gir_headers += headers

sources += files(
  'gdata-gcontact-calendar.c',
  'gdata-gcontact-event.c',
  'gdata-gcontact-external-id.c',
  'gdata-gcontact-jot.c',
  'gdata-gcontact-language.c',
  'gdata-gcontact-relation.c',
  'gdata-gcontact-website.c',
)
