gdata_gd_path = join_paths('gdata', 'gd')
gdata_gd_include_path = join_paths(gdata_includedir, gdata_gd_path)

gdata_gd_headers = [
	'gdata-gd-email-address.h',
	'gdata-gd-im-address.h',
	'gdata-gd-name.h',
	'gdata-gd-organization.h',
	'gdata-gd-phone-number.h',
	'gdata-gd-postal-address.h',
	'gdata-gd-reminder.h',
	'gdata-gd-when.h',
	'gdata-gd-where.h',
	'gdata-gd-who.h',
]

install_headers(gdata_gd_headers, install_dir: gdata_gd_include_path)
