gdata_calendar_headers = [
	'gdata-calendar-access-rule.h',
	'gdata-calendar-calendar.h',
	'gdata-calendar-event.h',
	'gdata-calendar-feed.h',
	'gdata-calendar-query.h',
	'gdata-calendar-service.h',
]

install_headers(
  gdata_calendar_headers,
  install_dir: join_paths(gdata_includedir, 'gdata/services/calendar')
)
